--- a/JavaApplication1/nbproject/private/private.properties
+++ b/JavaApplication1/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Najmul Muttaqin\\AppData\\Roaming\\NetBeans\\7.4\\build.properties
+user.properties.file=C:\\Users\\Ardiansyah\\AppData\\Roaming\\NetBeans\\7.3.1\\build.properties
